--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Anuvab Chakravarty - Portfolio</title>
   <link rel="icon" type="image/x-icon" href="">
-  <link rel="stylesheet" href="./Assets/css/aos.css">
-  <link rel="stylesheet" href="./Assets/css/bootstrap.min.css">
-  <link rel="stylesheet" href="./Assets/css/line-awesome.min.css">
-  <link rel="stylesheet" href="./Assets/css/style.css">
+  <link rel="stylesheet" href="./assets/css/aos.css">
+  <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
+  <link rel="stylesheet" href="./assets/css/line-awesome.min.css">
+  <link rel="stylesheet" href="./assets/css/style.css">
   
   <link rel="stylesheet" type='text/css' href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" />
           
@@ -23,7 +23,7 @@
     <div class="container flex-lg-column">
       <a class="navbar-brand mx-lg-auto mb-lg-3" href="#">
         <span class="h3 fw-bold d-block d-lg-none">Anuvab Chakravarty</span>
-        <img src="./Assets/images/person.jpg" class="d-none d-sm-block rounded-circle" alt="my-image" style="width: 200px; height: 200px;">
+        <img src="./assets/images/person.jpg" class="d-none d-sm-block rounded-circle" alt="my-image" style="width: 200px; height: 200px;">
       </a>
 
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -278,7 +278,7 @@
           <div class="col-md-4" data-aos="fade-up">
             <div class="card-custom rounded-4 bg-base shadow-effect">
               <!-- <div class="card-custom-image rounded-4">
-                <img class="rounded-4" src="./Assets/images/CISCE.jpg" alt="">
+                <img class="rounded-4" src="./assets/images/CISCE.jpg" alt="">
               </div> -->
               <div class="card-custom-content p-4">
                 <h4 class="text-brand">98.0% in ISC 2021</h4>
@@ -294,7 +294,7 @@
           <div class="col-md-4" data-aos-delay="300" data-aos="fade-up">
             <div class="card-custom rounded-4 bg-base shadow-effect">
               <!-- <div class="card-custom-image rounded-4">
-                <img class="rounded-4" src="./Assets/images/CISCE.jpg" alt="">
+                <img class="rounded-4" src="./assets/images/CISCE.jpg" alt="">
               </div> -->
               <div class="card-custom-content p-4">
                 <h4 class="text-brand">95.8% in ICSE 2019</h4>
@@ -309,7 +309,7 @@
           <div class="col-md-4" data-aos-delay="600" data-aos="fade-up">
             <div class="card-custom rounded-4 bg-base shadow-effect">
               <!-- <div class="card-custom-image rounded-4">
-                <img class="rounded-4" src="./Assets/images/makaut-4.jpg" alt="">
+                <img class="rounded-4" src="./assets/images/makaut-4.jpg" alt="">
               </div> -->
               <div class="card-custom-content p-4">
                 <h4 class="text-brand">8.952 SGPA</h4>
@@ -323,7 +323,7 @@
           <!-- <div class="col-md-10" data-aos-delay="300" data-aos="fade-up">
             <div class="card-custom rounded-4 bg-base shadow-effect">
               <div class="card-custom-image rounded-4">
-                <img class="rounded-4" src="./Assets/images/certificate.webp" alt="">
+                <img class="rounded-4" src="./assets/images/certificate.webp" alt="">
               </div>
               <div class="card-custom-content p-4">
                 <h4>All My Certificates</h4>
@@ -674,7 +674,7 @@
                   <div class="col-md-6" data-aos="fade-up">
                     <div class="card-custom rounded-4 bg-base shadow-effect">
                       <!-- <div class="card-custom-image rounded-4">
-                        <img class="rounded-4" src="./Assets/images/sidebar-img.jpg" alt="">
+                        <img class="rounded-4" src="./assets/images/sidebar-img.jpg" alt="">
                       </div> -->
                       <div class="card-custom-content p-4">
                         <p class="text-brand mb-2">Certificates</p>
@@ -687,7 +687,7 @@
                   <div class="col-md-6" data-aos="fade-up" data-aos-delay="300">
                     <div class="card-custom rounded-4 bg-base shadow-effect">
                       <!-- <div class="card-custom-image rounded-4">
-                        <img class="rounded-4" src="./Assets/images/sidebar-img.jpg" alt="">
+                        <img class="rounded-4" src="./assets/images/sidebar-img.jpg" alt="">
                       </div> -->
                       <div class="card-custom-content p-4">
                         <p class="text-brand mb-2">Awards and Honours</p>
@@ -700,7 +700,7 @@
                   <div class="col-md-6" data-aos="fade-up" data-aos-delay="300">
                     <div class="card-custom rounded-4 bg-base shadow-effect">
                       <!-- <div class="card-custom-image rounded-4">
-                        <img class="rounded-4" src="./Assets/images/sidebar-img.jpg" alt="">
+                        <img class="rounded-4" src="./assets/images/sidebar-img.jpg" alt="">
                       </div> -->
                       <div class="card-custom-content p-4">
                         <p class="text-brand mb-2">Coursework</p>
@@ -713,7 +713,7 @@
                   <div class="col-md-6" data-aos="fade-up" data-aos-delay="600">
                     <div class="card-custom rounded-4 bg-base shadow-effect">
                       <!-- <div class="card-custom-image rounded-4">
-                        <img class="rounded-4" src="./Assets/images/sidebar-img.jpg" alt="">
+                        <img class="rounded-4" src="./assets/images/sidebar-img.jpg" alt="">
                       </div> -->
                       <div class="card-custom-content p-4">
                         <p class="text-brand mb-2">Projects</p>
@@ -894,9 +894,9 @@
 
   </div>
   <!-- content-wrapper end -->
-  <script src="./Assets/js/aos.js"></script>
-  <script src="./Assets/js/bootstrap.bundle.min.js"></script>
-  <script src="./Assets/js/main.js"></script>
+  <script src="./assets/js/aos.js"></script>
+  <script src="./assets/js/bootstrap.bundle.min.js"></script>
+  <script src="./assets/js/main.js"></script>
 </body>
 
 </html>
