--- a/index.html
+++ b/index.html
@@ -504,7 +504,7 @@
                           <p>This is my basic Portfolio Website created using HTML5, CSS3 and Bootstrap 5. I have hosted the page using GitHub pages. The website has a very simplified account of my education, work experience and interests. This the link to the GitHub Repository. The actual link is there in the Featured section and is also present in the Headline section.</p>
                           <div class="d-flex">
                             <a href="#" class="link-custom me-4">Deployed Link</a>
-                            <a href="https://github.com/Vanaub22/GreenIQ" class="link-custom" target="_blank">GitHub Link</a>
+                            <a href="https://github.com/Vanaub22/Portfolio-Website" class="link-custom" target="_blank">GitHub Link</a>
                           </div>
                       </div>
                   </div>
