Fixes FreeCodeCamp Link

--- a/index.html
+++ b/index.html
@@ -421,8 +421,8 @@
                   </div>
                   <div class="card-custom-content p-4">
                       <p class="text-brand mb-2">Responsive Web Design</p>
-                      <h5 class="mb-4">GitHub Profile</h5>
-                      <p>I completed the 300 hour FreeCodeCamp course on Responsive Web Design and obtained a comprehensive understanding of Front-end design as a whole.</p>
+                      <h5 class="mb-4">FreeCodeCamp Profile</h5>
+                      <p>I completed the 300 hour FreeCodeCamp course on Responsive Web Design comprising 17 guided projects and 5 certification projects and obtained a comprehensive understanding of Front-end design as a whole.</p>
                       <a href="https://www.freecodecamp.org/Vanaub22" class="link-custom" target="_blank">Profile Link</a>
                   </div>
               </div>
