Removed irrelevant stuff

--- a/index.html
+++ b/index.html
@@ -676,7 +676,7 @@
                   </div>
                 </div>
 
-                <div class="col-12" data-aos="fade-up" data-aos-delay="600">
+                <!-- <div class="col-12" data-aos="fade-up" data-aos-delay="600">
                   <div class="bg-base p-4 rounded-4 shadow-effect">
                     <h4>Content Wing Member</h4>
                     <p class="text-brand mb-2">
@@ -719,7 +719,7 @@
                       Youth' and supplied curated content for their blog.
                     </p>
                   </div>
-                </div>
+                </div> -->
               </div>
             </div>
 
@@ -775,7 +775,7 @@
                   </div>
                 </div>
 
-                <div class="col-12" data-aos="fade-up" data-aos-delay="600">
+                <!-- <div class="col-12" data-aos="fade-up" data-aos-delay="600">
                   <div class="bg-base p-4 rounded-4 shadow-effect">
                     <h4>Startup Wing Member</h4>
                     <p class="text-brand mb-2">
@@ -790,9 +790,9 @@
                       flow of the community.
                     </p>
                   </div>
-                </div>
+                </div> -->
 
-                <div class="col-12" data-aos="fade-up" data-aos-delay="600">
+                <!-- <div class="col-12" data-aos="fade-up" data-aos-delay="600">
                   <div class="bg-base p-4 rounded-4 shadow-effect">
                     <h4>PR Representative</h4>
                     <p class="text-brand mb-2">
@@ -805,8 +805,9 @@
                       throughout the college.
                     </p>
                   </div>
-                </div>
-                <div class="col-12" data-aos="fade-up" data-aos-delay="600">
+                </div> -->
+
+                <!-- <div class="col-12" data-aos="fade-up" data-aos-delay="600">
                   <div class="bg-base p-4 rounded-4 shadow-effect">
                     <h4>Graphics Wing Member</h4>
                     <p class="text-brand mb-2">
@@ -819,7 +820,8 @@
                       brochures and other visual elements for IIC.
                     </p>
                   </div>
-                </div>
+                </div> -->
+
               </div>
             </div>
           </div>
