--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
         <a class="navbar-brand mx-lg-auto mb-lg-3" href="#">
           <span class="h3 fw-bold d-block d-lg-none">Anuvab Chakravarty</span>
           <img
-            src="./assets/images/person.jpg"
+            src="./assets/images/person.jpeg"
             class="d-none d-sm-block rounded-circle"
             alt="my-image"
-            style="width: 200px; height: 200px"
+            style="width: 165px; height: 185px"
           />
         </a>
 
