Updated GPA and tech stack

--- a/index.html
+++ b/index.html
@@ -225,12 +225,12 @@
                   </div>
                   <div class="iconbox-wrapper">
                     <div class="iconbox rounded-4">
-                      <i class="devicon-socketio-original"></i>
+                      <i class="devicon-react-original"></i>
                     </div>
                   </div>
                   <div class="iconbox-wrapper">
                     <div class="iconbox rounded-4">
-                      <i class="devicon-powershell-plain"></i>
+                      <i class="devicon-supabase-plain"></i>
                     </div>
                   </div>
                   <div class="iconbox-wrapper">
@@ -306,7 +306,7 @@
           <div class="col-md-4" data-aos-delay="600" data-aos="fade-up">
             <div class="card-custom rounded-4 bg-base shadow-effect">
               <div class="card-custom-content p-4">
-                <h4 class="text-brand">8.952 SGPA</h4>
+                <h4 class="text-brand">8.87 CGPA</h4>
                 <h4>Till 5th Semester</h4>
                 <p class="text-brand mb-2">B.Tech CSE at TMSL</p>
                 <p>
@@ -821,7 +821,6 @@
                     </p>
                   </div>
                 </div> -->
-
               </div>
             </div>
           </div>
