--- a/index.html
+++ b/index.html
@@ -480,6 +480,9 @@
                   />
                 </div>
                 <div class="card-custom-content p-4">
+                  <p class="text-brand mb-2">
+                    Full Stack Hackathon Team Project
+                  </p>
                   <h4>GreenIQ - An E-learning Platform for Rural Areas</h4>
                   <p>
                     GreenIQ is a team hackathon project which incorporates
@@ -519,6 +522,9 @@
                   />
                 </div>
                 <div class="card-custom-content p-4">
+                  <p class="text-brand mb-2">
+                    Flask, SQL, Extensive Docs, CRUD
+                  </p>
                   <h4>
                     Prototype of ProTender - A Tender Bidding Interface for
                     enhanced E-tender management
@@ -551,6 +557,9 @@
                   />
                 </div>
                 <div class="card-custom-content p-4">
+                  <p class="text-brand mb-2">
+                    Machine Learning, Text Vectorization
+                  </p>
                   <h4>Movie Recommender Application</h4>
                   <p>
                     This app gives content-based movie recommendations using
@@ -586,11 +595,48 @@
                 <div class="card-custom-image rounded-4">
                   <img
                     class="rounded-4"
+                    src="./assets/images/project-5.png"
+                    alt=""
+                  />
+                </div>
+                <div class="card-custom-content p-4">
+                  <p class="text-brand mb-2">ReactJS, Supabase, CRUD</p>
+                  <h4>Factastic - A Fun Fact Sharing Application</h4>
+                  <p>
+                    A full stack fact-sharing CRUD application created using
+                    ReactJS for front-end and Supabase for back-end. Users can
+                    add new facts to the database, classify existing facts based
+                    on category filters, add likes, upvote or downvote facts.
+                  </p>
+                  <div class="d-flex">
+                    <a
+                      href="https://factastic.netlify.app/"
+                      class="link-custom me-4"
+                      target="_blank"
+                      >Deployed Link</a
+                    >
+                    <a
+                      href="https://github.com/Vanaub22/Factastic"
+                      class="link-custom"
+                      target="_blank"
+                      >GitHub Link</a
+                    >
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-md-6" data-aos="fade-up" data-aos-delay="300">
+              <div class="card-custom rounded-4 bg-base shadow-effect">
+                <div class="card-custom-image rounded-4">
+                  <img
+                    class="rounded-4"
                     src="./assets/images/project-4.png"
                     alt=""
                   />
                 </div>
                 <div class="card-custom-content p-4">
+                  <p class="text-brand mb-2">Front-End Development</p>
                   <h4>Portfolio Website</h4>
                   <p>
                     This is my basic Portfolio Website created using HTML5, CSS3
