Increased responsiveness for smaller screens

--- a/index.html
+++ b/index.html
@@ -253,79 +253,81 @@
       <!-- Skills end -->
 
       <!-- Education start -->
-      <section id="Education" class="full-height px-lg-5">
-        <div class="row pb-4" data-aos="fade-up">
-          <div class="col-lg-8">
-            <h6 class="text-brand">Education</h6>
-            <h1>My Academic Qualifications:</h1>
+<section id="Education" class="full-height px-lg-5">
+  <div class="container">
+    <div class="row pb-4" data-aos="fade-up">
+      <div class="col-lg-8">
+        <h6 class="text-brand">Education</h6>
+        <h1>My Academic Qualifications:</h1>
+      </div>
+    </div>
+
+    <div class="row gy-4">
+      <div class="col-md-4" data-aos="fade-up">
+        <div class="card-custom rounded-4 bg-base shadow-effect">
+          <div class="card-custom-content p-4">
+            <h4 class="text-brand">98.0% in ISC 2021</h4>
+            <h4>Class XII</h4>
+            <p class="text-brand mb-2">Calcutta Boys' School</p>
+            <p>
+              I was recommended for the INSPIRE scholarship for being among
+              the top 1% of performers in ISC 2021. I had Science Stream
+              with CS.
+            </p>
+            <a
+              href="https://drive.google.com/file/d/1eoDaiEIiccreQsCP6fwiTqsWHN6FTad2/view"
+              class="link-custom"
+              target="_blank"
+              >My Marksheet</a
+            >
           </div>
         </div>
+      </div>
 
-        <div class="row gy-4">
-          <div class="col-md-4" data-aos="fade-up">
-            <div class="card-custom rounded-4 bg-base shadow-effect">
-              <div class="card-custom-content p-4">
-                <h4 class="text-brand">98.0% in ISC 2021</h4>
-                <h4>Class XII</h4>
-                <p class="text-brand mb-2">Calcutta Boys' School</p>
-                <p>
-                  I was recommended for the INSPIRE scholarship for being among
-                  the top 1% of performers in ISC 2021. I had Science Stream
-                  with CS.
-                </p>
-                <a
-                  href="https://drive.google.com/file/d/1eoDaiEIiccreQsCP6fwiTqsWHN6FTad2/view"
-                  class="link-custom"
-                  target="_blank"
-                  >My Marksheet</a
-                >
-              </div>
-            </div>
-          </div>
-
-          <div class="col-md-4" data-aos-delay="300" data-aos="fade-up">
-            <div class="card-custom rounded-4 bg-base shadow-effect">
-              <div class="card-custom-content p-4">
-                <h4 class="text-brand">95.8% in ICSE 2019</h4>
-                <h4>Class X</h4>
-                <p class="text-brand mb-2">Calcutta Boys' School</p>
-                <p>
-                  Was among the top performers in my school. Had a perfect score
-                  of 100/100 in Chemistry and a 99/100 in Mathematics.
-                </p>
-                <a
-                  href="https://drive.google.com/file/d/1HREhLz-CfP38kXK2mcpwU3uOJJjIpBXP/view"
-                  class="link-custom"
-                  target="_blank"
-                  >My Marksheet</a
-                >
-              </div>
-            </div>
-          </div>
-
-          <div class="col-md-4" data-aos-delay="600" data-aos="fade-up">
-            <div class="card-custom rounded-4 bg-base shadow-effect">
-              <div class="card-custom-content p-4">
-                <h4 class="text-brand">8.87 CGPA</h4>
-                <h4>Till 5th Semester</h4>
-                <p class="text-brand mb-2">B.Tech CSE at TMSL</p>
-                <p>
-                  I joined Techno Main Salt Lake in 2021 after qualifying WBJEE.
-                  It is affiliated to the Maulana Abul Kalam Azad University of
-                  Technology (MAKAUT).
-                </p>
-                <a
-                  href="https://drive.google.com/drive/folders/1KH_q_x6jHvBuRa4AH-Te3cH1xUQoIWo_?usp=drive_link"
-                  class="link-custom"
-                  target="_blank"
-                  >View my Grade Cards</a
-                >
-              </div>
-            </div>
+      <div class="col-md-4" data-aos-delay="300" data-aos="fade-up">
+        <div class="card-custom rounded-4 bg-base shadow-effect">
+          <div class="card-custom-content p-4">
+            <h4 class="text-brand">95.8% in ICSE 2019</h4>
+            <h4>Class X</h4>
+            <p class="text-brand mb-2">Calcutta Boys' School</p>
+            <p>
+              Was among the top performers in my school. Had a perfect score
+              of 100/100 in Chemistry and a 99/100 in Mathematics.
+            </p>
+            <a
+              href="https://drive.google.com/file/d/1HREhLz-CfP38kXK2mcpwU3uOJJjIpBXP/view"
+              class="link-custom"
+              target="_blank"
+              >My Marksheet</a
+            >
           </div>
         </div>
-      </section>
-      <!-- Education end -->
+      </div>
+
+      <div class="col-md-4" data-aos-delay="600" data-aos="fade-up">
+        <div class="card-custom rounded-4 bg-base shadow-effect">
+          <div class="card-custom-content p-4">
+            <h4 class="text-brand">8.87 CGPA</h4>
+            <h4>Till 6th Semester</h4>
+            <p class="text-brand mb-2">B.Tech CSE at TMSL</p>
+            <p>
+              I joined Techno Main Salt Lake in 2021 after qualifying WBJEE.
+              It is affiliated to the Maulana Abul Kalam Azad University of
+              Technology (MAKAUT).
+            </p>
+            <a
+              href="https://drive.google.com/drive/folders/1KH_q_x6jHvBuRa4AH-Te3cH1xUQoIWo_?usp=drive_link"
+              class="link-custom"
+              target="_blank"
+              >View my Grade Cards</a
+            >
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- Education end -->
 
       <!-- profiles -->
       <section id="profiles" class="full-height px-lg-5">
