Made minor changes to experiences section

--- a/index.html
+++ b/index.html
@@ -664,217 +664,129 @@
         </div>
       </section>
       <!-- //WORK -->
-      <!-- about start -->
-      <section id="about" class="full-height px-lg-5">
-        <div class="container">
-          <div class="row pb-4" data-aos="fade-up">
-            <div class="col-lg-10">
-              <h6 class="text-brand">ABOUT</h6>
-              <h1>Experiences, PORs and Volunteering</h1>
-            </div>
-          </div>
 
-          <div class="row gy-5">
-            <div class="col-lg-6">
-              <!-- <h3 class="mb-4" data-aos="fade-up" data-aos-delay="300">Education</h3> -->
-              <div class="row gy-4">
-                <div class="col-12" data-aos="fade-up" data-aos-delay="600">
-                  <div class="bg-base p-4 rounded-4 shadow-effect">
-                    <h4>SQL Developer Intern</h4>
-                    <p class="text-brand mb-2">
-                      Celebal Technologies Summer Internship
-                    </p>
-                    <p class="text-brand mb-2">May 2024 - Present</p>
-                    <p class="mb-0">
-                      Utilized the Microsoft SQL Server and developed queries on
-                      AdventureWorks database and other problem statements.
-                      Completed 68 training modules, 6 assignments and 1 final
-                      project on stored procedures, Star and Snowflake Schema.
-                    </p>
-                    <br />
-                    <!-- <a href="" class="link-custom">Offer Letter</a> -->
-                  </div>
-                </div>
+<!-- about start -->
+<section id="about" class="full-height px-lg-5">
+  <div class="container">
+    <div class="row pb-4" data-aos="fade-up">
+      <div class="col-lg-10">
+        <h6 class="text-brand">ABOUT</h6>
+        <h1>Experiences</h1>
+      </div>
+    </div>
 
-                <div class="col-12" data-aos="fade-up" data-aos-delay="600">
-                  <div class="bg-base p-4 rounded-4 shadow-effect">
-                    <h4>Member of the Anti-Ragging Cell (ARC)</h4>
-                    <p class="text-brand mb-2">Techno Main Salt Lake</p>
-                    <p class="text-brand mb-2">August 2023 - Present</p>
-                    <p class="mb-0">
-                      As a member of the Anti-Ragging Cell (ARC) of our college,
-                      I will be responsible for preventing any unforeseen events
-                      pertaining to ragging or harassment of juniors in or near
-                      college premises.
-                    </p>
-                  </div>
-                </div>
+    <!-- Work Experiences Section -->
+    <h3 class="mb-4" data-aos="fade-up" data-aos-delay="300">Work Experiences</h3>
+    <div class="row gy-4">
 
-                <div class="col-12" data-aos="fade-up" data-aos-delay="600">
-                  <div class="bg-base p-4 rounded-4 shadow-effect">
-                    <h4>Freelance Content Writer</h4>
-                    <p class="text-brand mb-2">WebTextPro Content Solutions</p>
-                    <p class="text-brand mb-2">December 2022 - January 2023</p>
-                    <p class="mb-0">
-                      During my short tenure, I prepared web content and blog
-                      posts for clients following best SEO practices. I
-                      maintained deadlines and delivered well-researched content
-                      on a variety of topics.
-                    </p>
-                  </div>
-                </div>
 
-                <!-- <div class="col-12" data-aos="fade-up" data-aos-delay="600">
-                  <div class="bg-base p-4 rounded-4 shadow-effect">
-                    <h4>Content Wing Member</h4>
-                    <p class="text-brand mb-2">
-                      Institution's Innovation Council (IIC TMSL)
-                    </p>
-                    <p class="text-brand mb-2">November 2021 - August 2023</p>
-                    <p class="mb-0">
-                      I served the organization by preparing web content,
-                      writeups, reports, MOUs and well-researched articles for
-                      their social media posts, event posters and websites.
-                    </p>
-                  </div>
-                </div>
-
-                <div class="col-12" data-aos="fade-up" data-aos-delay="600">
-                  <div class="bg-base p-4 rounded-4 shadow-effect">
-                    <h4>Member</h4>
-                    <p class="text-brand mb-2">
-                      Centre of Incubation, Innovation and Creation (CIIC)
-                    </p>
-                    <p class="text-brand mb-2">July 2022 - June 2023</p>
-                    <p class="mb-0">
-                      I became a member of this community through their
-                      selection process. I had to leave the team after accepting
-                      a leadership position in Team Eclectica.
-                    </p>
-                  </div>
-                </div>
-
-                <div class="col-12" data-aos="fade-up" data-aos-delay="600">
-                  <div class="bg-base p-4 rounded-4 shadow-effect">
-                    <h4>Content and Research Team</h4>
-                    <p class="text-brand mb-2">
-                      Samarth TMSL - The Civil Service Society
-                    </p>
-                    <p class="text-brand mb-2">November 2021 - January 2022</p>
-                    <p class="mb-0">
-                      I was selected as a member through 'Clash of Creativity'
-                      in which I stood first. I did the event 'Voices of the
-                      Youth' and supplied curated content for their blog.
-                    </p>
-                  </div>
-                </div> -->
-              </div>
-            </div>
-
-            <div class="col-lg-6">
-              <!-- <h3 class="mb-4" data-aos="fade-up" data-aos-delay="300">Experience</h3> -->
-              <div class="row gy-4">
-                <div class="col-12" data-aos="fade-up" data-aos-delay="600">
-                  <div class="bg-base p-4 rounded-4 shadow-effect">
-                    <h4>Convenor and Signing Authority</h4>
-                    <p class="text-brand mb-2">
-                      Eclectica - The literary committee of TMSL
-                    </p>
-                    <p class="text-brand mb-2">July 2024 - Present</p>
-                    <p class="mb-0">
-                      As the Convenor of the official literary committee of the
-                      college, I am currently in charge of handling a team of
-                      60+ members and organizing one of the biggest
-                      inter-college literary fests in Kolkata.
-                    </p>
-                  </div>
-                </div>
-
-                <div class="col-12" data-aos="fade-up" data-aos-delay="600">
-                  <div class="bg-base p-4 rounded-4 shadow-effect">
-                    <h4>Head of Opinionists (The Debating Society)</h4>
-                    <p class="text-brand mb-2">
-                      Eclectica - The literary committee of TMSL
-                    </p>
-                    <p class="text-brand mb-2">December 2022 - June 2023</p>
-                    <p class="mb-0">
-                      Having won several debate competitions, I was chosen to
-                      lead the debating sub-club of Eclectica, Opinionists. As
-                      the head of the debating society, I will be responsible
-                      for moderating debates and setting the format for the
-                      upcoming debate competitions hosted by Team Eclectica.
-                    </p>
-                  </div>
-                </div>
-
-                <div class="col-12" data-aos="fade-up" data-aos-delay="600">
-                  <div class="bg-base p-4 rounded-4 shadow-effect">
-                    <h4>Content Writer</h4>
-                    <p class="text-brand mb-2">
-                      Eclectica - The literary Committee of TMSL
-                    </p>
-                    <p class="text-brand mb-2">November 2021 - July 2023</p>
-                    <p class="mb-0">
-                      As a member of the literary club, I utilized my creative
-                      flair to create event writeups and articles for their
-                      blog. I also won quite a few debates, extempore and
-                      creative-writing competitions.
-                    </p>
-                  </div>
-                </div>
-
-                <!-- <div class="col-12" data-aos="fade-up" data-aos-delay="600">
-                  <div class="bg-base p-4 rounded-4 shadow-effect">
-                    <h4>Startup Wing Member</h4>
-                    <p class="text-brand mb-2">
-                      Institution's Innovation Council (IIC TMSL)
-                    </p>
-                    <p class="text-brand mb-2">November 2021 - August 2023</p>
-                    <p class="mb-0">
-                      I have mentored two teams participating in the IIC
-                      Bootcamp and Hult Prize On-Campus Rounds. As a mentor, I
-                      helped the teams understand the flaws in their ideas and
-                      refine them. I also provided input regarding the event
-                      flow of the community.
-                    </p>
-                  </div>
-                </div> -->
-
-                <!-- <div class="col-12" data-aos="fade-up" data-aos-delay="600">
-                  <div class="bg-base p-4 rounded-4 shadow-effect">
-                    <h4>PR Representative</h4>
-                    <p class="text-brand mb-2">
-                      Institution's Innovation Council (IIC TMSL)
-                    </p>
-                    <p class="text-brand mb-2">November 2021 - August 2023</p>
-                    <p class="mb-0">
-                      As a PR representative for IIC I have anchored events,
-                      hosted seminars and even promoted events on a large scale
-                      throughout the college.
-                    </p>
-                  </div>
-                </div> -->
-
-                <!-- <div class="col-12" data-aos="fade-up" data-aos-delay="600">
-                  <div class="bg-base p-4 rounded-4 shadow-effect">
-                    <h4>Graphics Wing Member</h4>
-                    <p class="text-brand mb-2">
-                      Institution's Innovation Council (IIC TMSL)
-                    </p>
-                    <p class="text-brand mb-2">November 2021 - August 2022</p>
-                    <p class="mb-0">
-                      I was selected as a member through the drive and since
-                      then I have used my designing skills to create posters,
-                      brochures and other visual elements for IIC.
-                    </p>
-                  </div>
-                </div> -->
-              </div>
-            </div>
-          </div>
+      <div class="col-lg-6" data-aos="fade-up" data-aos-delay="600">
+        <div class="bg-base p-4 rounded-4 shadow-effect">
+          <h4>Research and Development Engineer Intern</h4>
+          <p class="text-brand mb-2">Keysight Technologies</p>
+          <p class="text-brand mb-2">September 2023 - Present</p>
+          <p class="mb-0">
+            Working in the Telecom and Computer Networking domain including TCP/IP and other networking protocol suites.
+          </p>
         </div>
-      </section>
-      <!-- about end -->
+      </div>
+
+      <div class="col-lg-6" data-aos="fade-up" data-aos-delay="600">
+        <div class="bg-base p-4 rounded-4 shadow-effect">
+          <h4>SQL Developer Intern</h4>
+          <p class="text-brand mb-2">Celebal Technologies Summer Internship</p>
+          <p class="text-brand mb-2">May 2024 - Present</p>
+          <p class="mb-0">
+            Utilized Microsoft SQL Server and developed queries on the AdventureWorks database. Completed 68 training modules, 6 assignments, and a final project on stored procedures, Star and Snowflake Schema.
+          </p>
+        </div>
+      </div>
+
+      
+
+      <!-- <div class="col-lg-6" data-aos="fade-up" data-aos-delay="600">
+        <div class="bg-base p-4 rounded-4 shadow-effect">
+          <h4>Software Development Intern</h4>
+          <p class="text-brand mb-2">TechCorp Solutions</p>
+          <p class="text-brand mb-2">June 2023 - August 2023</p>
+          <p class="mb-0">
+            Worked on developing APIs and integrating microservices in a cloud environment. Developed and tested features for the company's main product using Python and Flask.
+          </p>
+        </div>
+      </div> -->
+
+
+      <!-- WebTextPro internship added here as a work experience -->
+      <div class="col-lg-6" data-aos="fade-up" data-aos-delay="600">
+        <div class="bg-base p-4 rounded-4 shadow-effect">
+          <h4>Freelance Content Writer</h4>
+          <p class="text-brand mb-2">WebTextPro Content Solutions</p>
+          <p class="text-brand mb-2">December 2022 - January 2023</p>
+          <p class="mb-0">
+            Prepared web content and blog posts for clients following SEO practices, delivering well-researched content on diverse topics.
+          </p>
+        </div>
+      </div>
+      </div>
+
+    <!-- PORs and Volunteering Section -->
+    <h3 class="mt-5 mb-4" data-aos="fade-up" data-aos-delay="300">PORs and Volunteering</h3>
+    <div class="row gy-4">
+      <div class="col-lg-6" data-aos="fade-up" data-aos-delay="600">
+        <div class="bg-base p-4 rounded-4 shadow-effect">
+          <h4>Convenor and Signing Authority</h4>
+          <p class="text-brand mb-2">Eclectica - The Literary Committee of TMSL</p>
+          <p class="text-brand mb-2">July 2024 - Present</p>
+          <p class="mb-0">
+            As the Convenor of the literary committee, I handle a team of 90+ members and play an active role in organizing one of the biggest inter-college literary fests in Kolkata.
+          </p>
+        </div>
+      </div>
+
+      <div class="col-lg-6" data-aos="fade-up" data-aos-delay="600">
+        <div class="bg-base p-4 rounded-4 shadow-effect">
+          <h4>Head of Opinionists (The Debating Society)</h4>
+          <p class="text-brand mb-2">Eclectica - The Literary Committee of TMSL</p>
+          <p class="text-brand mb-2">December 2022 - June 2023</p>
+          <p class="mb-0">
+            As the head of the debating society, I moderated debates and set the format for upcoming competitions hosted by Team Eclectica.
+          </p>
+        </div>
+      </div>
+
+      <div class="col-lg-6" data-aos="fade-up" data-aos-delay="600">
+        <div class="bg-base p-4 rounded-4 shadow-effect">
+          <h4>Content Writer</h4>
+          <p class="text-brand mb-2">Eclectica - The Literary Committee of TMSL</p>
+          <p class="text-brand mb-2">November 2021 - July 2023</p>
+          <p class="mb-0">
+            I prepared event writeups and blog articles for the literary club, contributing to its online presence and social media.
+          </p>
+        </div>
+      </div>
+
+      <div class="col-lg-6" data-aos="fade-up" data-aos-delay="600">
+        <div class="bg-base p-4 rounded-4 shadow-effect">
+          <h4>Member of the Anti-Ragging Cell (ARC)</h4>
+          <p class="text-brand mb-2">Techno Main Salt Lake</p>
+          <p class="text-brand mb-2">August 2023 - Present</p>
+          <p class="mb-0">
+            As a member of the Anti-Ragging Cell (ARC) of our college,
+            I will be responsible for preventing any unforeseen events
+            pertaining to ragging or harassment of juniors in or near
+            college premises.
+          </p>
+        </div>
+      </div>
+
+
+    </div>
+  </div>
+</section>
+<!-- about end -->
+
+
+
       <!-- reviews start -->
       <section id="highlights" class="full-height px-lg-5">
         <div class="container">
@@ -920,7 +832,7 @@
                     I have attended and participated in quite a Hackathons,
                     Ideathons, Debates and Case Study Challenges over the past
                     few years and have been awarded positions. Here are some of
-                    them in reverse chronological order.
+                    them.
                   </p>
                   <a
                     href="https://www.linkedin.com/in/anuvab-chakravarty-001b39233/details/honors/"
